tests/bad/wrong_functions/bad107.lat
int main() {

}

zly[] f() {
    return;
}
